--- a/NodumVisualCalculator/Components/MainNodeComponent.razor
+++ b/NodumVisualCalculator/Components/MainNodeComponent.razor
@@ -312,6 +312,6 @@
         node.PositionX = nodeWindow.PositionX;
         node.PositionY = nodeWindow.PositionY;
 
-        StateHasChanged();
+        //StateHasChanged();
     }
 }
